--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/16-Under-the-hood.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/16-Under-the-hood.mdx
@@ -148,4 +148,91 @@ Under the hood lessons are meant for practice, as we know that skills come from 
 
 ## Thinking with visuals
 
-## 
+### Missing Values
+
+ **Que:** Find the missing value. 
+![](https://lh3.googleusercontent.com/7rMkw6gMPcYEnyP10IMfdHLgBjOlT37VOPIxzmqM-89IoKC4yyjEUMUPa5tPH6bloa7My27SdI7RluAfeNwTnLgKi7mS_Sw8FhvMGya3_3Q-IvmEFp6_4H10z4b9cnSMaRqic5X1Er1j6y26rJXVlng)
+
+>[**Check the solution!**](https://lh5.googleusercontent.com/vLmKPwcNRTWs_n_iDx4LPnqYZDk60sRwZ87nuPhVqhzB0IR7Y1jbVOco4ah4Q1sUpbhZLnlQRajrA1_nRcZbz3ObzWlMSxLljBMS-DxF8GqQtNSG7lz8X8ygxOSbb8BleJfk5Ef364hTiTUsGKct23w)
+
+
+ **Que:** Find the missing value.
+![](https://lh3.googleusercontent.com/XvEkicH3iv7o1homPgNxdzo6sjOEI9XOd6Q-qqZCc3e5dTxLzEgPLF2GKQplg0bYdCLX__P_yrUdbCprVzBIBUyM-hMFN8sTnmGMLimaGmM0bYNldjKf28gfjRmFb_mO033Z3CNfborinWROx6U)
+
+>[**Check the solution!**](https://lh5.googleusercontent.com/Uk4AFY2mk0zSuW_lEmcDFQSn7GuSAjU5_2_FAOzOwymI2bx_mzseElTkpvUkAcOVsaqqiFgcLKDXrkOVGtFs25T2XG9sOFwVKbCXevIkIw4bnIKyEfFm28Zmk_JTwkij4VaGpdlTyK2KbRufxBXMoek)
+
+
+ **Que:** Find the missing value.
+![](https://lh3.googleusercontent.com/t-Aue2nbadXX6C3vjJSTDNLk2qVq1_F2VZxWGmIRf7sVGJsJswrZfkhXdtfryIOBIKOUdmX-UtOwYVNDP4qgNykb3TgsXjJt2pNpg1ma8oLg2Lg58S0z1LatGsezUKCr4KMTP6J59UFJccs0tzMyX5A)
+
+>[**Check the solution!**](https://lh4.googleusercontent.com/uk9eoT2mW9GI8XygFdMxfa_RMrDV6HSUHCflbgVW5p3G5XJY45HUorYEJBS5rFzdzTZeW8ENmw5ps7blFPpq79eL64JYNILL4D6dxcPhd_quRIbgPJxnWeEvbi0tXF2CdnKvoXxGf9bhAhV4a2LHf6Y)
+
+
+ **Que:** Find the missing value.
+![](https://lh6.googleusercontent.com/ttFaS5RwX0mrhOE66scVgtV8h4wNYyYqVutXl4eFXiYTLEW_EC4yIj6EX7OIENNvpCZeBDdAJ6-BxAbUuLvBko98VxqyVFIkRoVhmBHt5KyilcxCDhAfskMcemCM5AnGx0rt7ixF_4HX0aqt9JiAAgY)
+
+>[**Check the solution!**](https://lh6.googleusercontent.com/ZtwfUhqmES0lDoBpa9HvFMFYTaTNVUemOCeCoJY6EMfSi_6cOTYz-1Sq91c_icFN61QdzuXwEARvJfARE2wWFbWao5xe_5w_EyUaRI7G9N3PRYrXU3_IWbjV12_UXq7_fD8QXuAuLK5AQPiVD021ROw)
+
+### Paper Cutting
+ **Que:** Choose a figure which would most closely resemble the unfolded form of figure.
+
+![](https://lh3.googleusercontent.com/78fA_fpkJ3AAII3Ax4NuYO2Df3Ox09sv7CtsO86VQjkpSS9jQFr9x610-DDB0eNjDZHczL1ZvJaH2lhPN8h5k5DYSROgK6otdMpJRBQ44z0X91xvunmzc4MDwdKKCW2pmFr60s4BuBxYjgUaSu43b2w)
+
+>[**Check the solution!**](https://lh3.googleusercontent.com/VmiscXUQNe579-do-ey3_lj6XeqCeEyarWoG5AWMoUS4yhxiT4vFLl2hSaUDUIktwiRU6bbS7zqkqqFFBGiXIutdQjp55xeouBmkBM5YLvm29mobqRYaQ4QafQrRq_kLwlUOBqdzObpkL4lIomKPw1c)
+
+**Que:** Choose a figure which would most closely resemble the unfolded form of figure.
+
+![](https://lh5.googleusercontent.com/8V4picv5semZoFD4lOHZyPeHxtTler8G6oFfYgmdPt3pulDxH1XhQMrl4tj-90e_ptNdouox5UmJqnygBq1d0RV21TAl0v6JNIGpGf5qAzqvAjaX8NyEfPMYDlYwS_7kOZhxBPau-HqoG5OXcN3snk4)
+
+>[**Check the solution!**](https://lh6.googleusercontent.com/U3cm_167c16Nz20Fgjv6uE357MNHpuh_CDjh8llCSnTkd6LWQmQRwO5nYC-ckDMhVtx_ucUxQ4xeUiVGW1HNCOri4lQvRkkIrxND9AfyU30nmy7oXrUmiNQwEPkfLKFZjeF2ETnbSCYzNDwfPeI)
+
+
+**Que:** Choose a figure which would most closely resemble the unfolded form of figure.
+
+![](https://lh5.googleusercontent.com/7HrQcnqNpGVPZD-8DE1JmcvzH3gB6bdHoVG2iYod3s0tPDKzxRizLr1mqtTKU4fhEemYAdZcbJID0g67NxG4Djn6q25zwoqjKjtc_CipYPfpoPPXNTEfxei75v84uxeppbqI757fKPPmnA1dhZc)
+
+>[**Check the solution!**](https://lh6.googleusercontent.com/QrAHlPIoPUVq1OutXH4E8AqWJLnIndRaOq7DjF-SEUFoeR4_1pch_Lo6dqEAdX4UFaUtVJXlzBqnNi-dYFOpgdr5ko8V4iBR_354K8N2GX4cpjLtBCsG7tHvoXO_x_B4JUpjLs7cKEVUhYRwzWw)
+
+
+**Que:** Choose a figure which would most closely resemble the unfolded form of figure.
+
+![](https://lh3.googleusercontent.com/PBNib6i31T9LgrpIrVYDzwuu_GoDgCsjoLLWGNWVs-wA88C3C7kX1ej5GscQ6ImsWrVNzSK0r12Qr1FRB5T0qD2hOk-mosnPDDYzPsHNZJkPGUQGqqh8sZ4JIzsJoLYeRa8d1nSrOd5bEphYc3E)
+
+>[**Check the solution!**](https://lh5.googleusercontent.com/mcaMBTt1y88HP6YYXh33klNovbEAxZBIsE_u-7GvNVDPwvMx5VgIyT0mRdRaTjS9-TiYdimrpI4ut6m2yJGjUJOygY9LEWZDb786FTjyXfpm0ushNxvfftxt5eviF6wM3oeZlIXL3enenaC-g7I)
+
+
+**Que:** Choose a figure which would most closely resemble the unfolded form of figure.
+
+![](https://lh3.googleusercontent.com/0ZTlTVekQHaTSViyKpSs3-V68ZrBUxLGkhf_UeJmxEYVCfNwopMQ_FzNMBeSywYLgp1yYOgrtIBMXQcdLK208er4RG7M9bm5UyRhH2ec6M_Cja7BiTxAzVm4PZ5LiUg5SwliEm996bwYiuFgLxy7Wac)
+
+>[**Check the solution!**](https://lh4.googleusercontent.com/ZLzP71qp92xvygODZq5PlYjHDpjLVXD583VoBJVsUPwYI06TOqJuNZckyJ5SuBUlLM85zwRu63yKwoDJoangD1j1pwjAQcvQpaZEBHA2YMuRSQPDVxu4eHeniwbddR7eXiF9oSZcvgAzJE6r0Us)
+
+
+**Que:** Choose a figure which would most closely resemble the unfolded form of figure.
+
+![](https://lh5.googleusercontent.com/sVwGfY718e29cOOeYfmtQo4LKrWdP82CXuv7ELEwP8hlR-7xPTflQQnP3UfYB84vpcI6bxaZf4To9RQ2Bnufy-5rgncpFbjOk2kyoXcjQQBiDAxGsj3w08ycLnqGokJSIiyspv1VPsPYlbIG2wg)
+
+>[**Check the solution!**](https://lh3.googleusercontent.com/YehG8s5xFJIDA6_P9TUz_Fu2pEPE8A8RnPg2J93cCTlIXu-zXjFOR8nueeBzh5oe_LjwdslvKTvM7WHL5lW2VBxMXiL-3VcMMHmBDHZmPZ1uHqcnCkn2kX29f5Dabn9BluKv6sdH8gKAsPyEUhnBKt4)
+
+
+**Que:** Choose a figure which would most closely resemble the unfolded form of figure.
+
+![](https://lh4.googleusercontent.com/l2b7p22JEo2_tdd_oPByeBLOcw8LKIr0FGyjSXdn4vpCb3ANWEGbdNHESHshSpelhFWeZ8TMYQftiFOO3abeFsYbQLCW4n9WDfnbDS1nF64XPt0NCW9X6WKXcofomFmv_6tnczrANjqCznWtEOY)
+
+>[**Check the solution!**](https://lh4.googleusercontent.com/ubaaJSYGTAeqTT94K4h6l-CUsD7BCjaTLH2cv2t3v69csW0oCkKq8NP9dhzproYsHtvDKn2n2nJAtzeOwxGBHjneVfF-pogFWzaitxScw1mUlimK5sscnEa_6i4mmL_CNkiQKP44Y0se6SofGIU)
+
+### Missing Term
+
+**Que:** Find the missing part.
+
+![](https://lh5.googleusercontent.com/U1pEoP2W6PZDRSZ40dgsIGIzjjrMWVwiLD4lKlUjd3keTNGVK6mHVLXCwDuWr7IluzxEZb8D7P9TM_fFR887FlbTfHwreTB5AmSySvVHC19Nr1FuvXUmU61SwtARUfao9ZplwhLPbgyTF26yX8Q)
+
+>[**Check the solution!**](https://lh6.googleusercontent.com/p8RJq0t-c7lIXgGQsJSsQcIsLURSWVBmkn2usWs-mhkgiFiHzFbWekY2to-P8RG9yacBZX33OX0XmRoGhZx6A7UnV2Y-wZmafNviFAmDHve_gj77B0Hgzdkl23xBKbLwHPuO-4POuZHrHqCJhOE)
+
+
+**Que:** Find the missing part.
+
+![](https://lh6.googleusercontent.com/OgMYxtVw7R_DP4blJnt7VT2Ug7so6jA3p-CHRy95vSNo3OYjfcbzhrRdnm5XFyJ_Aw18EPo2IZMaexXCwPQ84n4uPtPkJ2fZpZp6MsPR9JRH5Q7777hr3NoXJL9tFH_j8efGSaYePbR5NzpposI)
+
+
+>[**Check the solution!**](https://lh4.googleusercontent.com/FEcaHeTLWF6232v8-KftAkZAPlOQvylNBSlNYdl582vCqqhzvjcfCF9PnHKtiIsEGbiF54eBxUx1rX4AHGQ-X8HuvDaT27gjrlkGbTdtdu79PmwdkhabZfxrMB_3xtICapxZLTrcb77K_uRiYyM)
