--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/01-Introduction-to-Problem-Solving.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/01-Introduction-to-Problem-Solving.mdx
@@ -9,22 +9,20 @@ In this lesson you will learn how Programming is primarily a problem-solving ski
 
 ## Why is Problem solving important?
 
-Solving problems means making choices. Typically, effective problem-solving skills result in “happier, more confident, and more independent” individuals. This skill builds confidence in you and helps you make better decisions.
-
+You probably ask yourself this question everyday, “Why is this important and why am I doing this?” So, let’s see why problem solving is so important in our lives. Solving problems means making choices. Typically, effective problem-solving skills result in **“happier, more confident, and more independent”** individuals. This skill builds confidence in you and helps you make better decisions.
 ## Reading content on the topic
 
-You are here because you chose engineering as your career choice, you must question yourself why the world needs engineers.
+You are here because **engineering** is your career choice, you must question yourself why the world needs engineers. 
+ - Engineers are needed to solve the world’s problems (from ‘developing’ a bridge for crossing a water body to ‘developing’ computers for processing data)
 
--   Engineers are needed to solve the world’s problems(from a bridge for crossing a water body to computers for processing data)
-    
--   In the last 2 decades, computer hardware got less expensive and the Internet opened the gates for many advanced technologies
-    
--   The job of a ‘software’ engineer is to solve problems by building software using various technologies that have evolved over the years.
+ - In the last 2 decades, computer hardware got less expensive and the Internet opened the gates for many advanced technologies
+
+ - The job of a ‘software’ engineer is to solve problems by building software using various technologies that have evolved over the years.
     
 
   
 
-Some technologies and domains trending in computer science are:
+Some technologies and domains **trending in computer science** are:
 
 -   AI (Artificial intelligence)
     
@@ -39,63 +37,62 @@ Some technologies and domains trending in computer science are:
 -   Cybersecurity
     
 
+Now let’s get on with looking at the various steps involved in solving a problem ( yes, any problem)
+
+![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0001+-+Introduction+to+Problem+Solving.png)
+
   
-  
 
-**Steps in Problem Solving**
+### Steps in Problem Solving
 
-**1.  Define the problem**
-    
-
+**1. Define the problem**
 The first step in solving a problem is to actually understand the problem and specifically identify the situation & circumstances that make it a problem. You have to evaluate various characteristics of the problem at hand. This process works in the following manner
+ - _Diagnose_ the problem
+ - Understand its _context_ 
+ - Understand its _background and behaviour/circumstances_ that made it a problem
+ - Segregation of _symptoms_ from the actual problem
 
--   Diagnose the problem
-    
--   Understand its context
-    
--   Understand its background and behaviour/circumstances that made it a problem
-    
--   Segregation of symptoms from the actual problem
-    
 
   
 
 **2.  Determine the root cause**
     
-
--   Generally, complex problems require a team to explore and solve them. In this step, the team agrees on the problem definition and explores the possible and probable causes of the problem.
-    
--   Various causes are studied and observed by the team until the root cause of the problem is identified.
-    
--   The discovery of the root cause further helps in improving the problem definition and its understanding.
-    
-
+Generally, complex problems require a team to explore and solve them. In this next step, the team agrees on the _problem definition and explores the possible and probable causes_ of the problem.
   
+ - Various _causes are studied and observed_ by the team until the root cause of the problem is identified.
+
+ - The discovery of the root cause further helps in improving the problem definition and its understanding.
+
+
+
+
+
+
 
 **3.  Develop the alternative solutions**
     
 
--   The next step is to identify and develop various possible solutions to the problem. These multiple alternative solutions can significantly enhance the quality of your ideal solution.
+-   The next step is to _identify and develop various possible solutions_ to the problem. These multiple alternative solutions can significantly enhance the quality of your ideal solution.
     
--   The solutions proposed are then assessed on how each of them relate to the root cause and symptoms of the problem.
+-   The _solutions proposed are then assessed_ on how each of them relate to the root cause and symptoms of the problem.
     
--   The less desirable solutions are discarded after noting down useful elements from them.
+-   The _less desirable solutions are discarded_ after noting down useful elements from them.
     
--   The advantages and disadvantages of the solutions left are evaluated
-    
+-   The remaining solutions are then evaluated for advantages and disadvantages. 
+
 
   
 
 **4.  Select a solution**
     
+The next step is making a choice. You have to choose the best possible solution from the list you may have curated and this choice is made using 3 steps:
 
-The 3 steps involved in this phase are:
 
-a.  Judge Feasibility: The efficiency of the solutions and whether these solutions will solve the problem without causing any unanticipated issues is evaluated.
+a.  _Judge Feasibility:_ The efficiency of the solutions and whether these solutions will solve the problem without causing any unanticipated issues is evaluated.
     
-b.  Select ‘Best-fit’ for the user: The most ideal solution according to the user requirements and engineering constraints is decided upon by the team
+b.  Select _‘Best-fit’_ for the user: The most ideal solution according to the user requirements and engineering constraints is decided upon by the team
     
-c.  A solution is chosen
+c.  A _solution_ is chosen
     
 
   
@@ -103,21 +100,20 @@ c.  A solution is chosen
 **5.  Implement the solution**
     
 
--   After a solution has been selected, the team decides and agrees upon various roles and responsibilities of members.
-    
--   The team prepares a plan for the process(how the problem will be solved)
-    
--   The tools and technologies that will be used are decided based on the expertise of the team members and the characteristics of the solution.
-    
--   The start date is determined and the key milestones are set
-    
+ - After a solution has been selected, the team decides and agrees upon various roles and responsibilities of members.
+ 
+ - The team prepares a “plan of action” or _plan for the process_(how the problem will be solved)
+ 
+ - The tools and technologies that will be used are decided based on the expertise of the team members and the characteristics of the solution.
+ 
+ - The _start date_ is determined and the _key milestones_ are set.
 
   
 
 **6.  Evaluate the outcome**
     
 
--   In the last step, the effectiveness of the solution is evaluated. This is done by monitoring the outcome and its performance and comparing the data obtained with the set expectations.
+-   In the last step, the effectiveness of the solution is evaluated. This is done by _monitoring the outcome and its performance_ and comparing the data obtained with the set expectations.
     
 -   Other parameters like cost and schedule are examined to identify the feasibility of the process for future projects.
     
@@ -130,6 +126,8 @@ c.  A solution is chosen
   
 
 ## Presentation handled in the class
+
+You can use this Presentation for future reference, this was handled in the live class as a part of the lecture.
 
 [PS0001 - Introduction to Problem Solving](https://docs.google.com/presentation/d/1VGQBWDHLU-RSfdbI9eOiOlFpZXFhLBNdzUlGpuITEPk/edit#slide=id.g1361768020b_0_70)
 
