--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/01-Introduction-to-Problem-Solving.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/01-Introduction-to-Problem-Solving.mdx
@@ -146,7 +146,9 @@ Here are some interesting videos that can help you post-class to dive deeper int
 4.  Bonus books : [Books](https://www.theexceptionalskills.com/problem-solving-books/)
     
 
-## End of the lesson Assessment
+## End of lesson self evaluation
+Answer the following questions to revise and get a better understanding of how well you understood the concepts in this lesson. Note that some of the questions may not be taught in this lesson so learn and explore by using search engines and reading more. Good luck!
+
 
 1.  What is the correct way of solving problems?
     
