--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/02-Thinking-with-numbers.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/02-Thinking-with-numbers.mdx
@@ -17,17 +17,17 @@ This will be a fun and playful lesson and you will be guided through the thought
 2. Number Series
 3. KenKen Puzzles
 
-### MATCH STICK MAGIC
+## Match Stick Magic
 We will be looking at some mathematical equations and geometrical shapes made from matchsticks(which are nothing but straight lines of the same length). Let's consider the following problem statement:
 
-**Problem Statement:** Correct the equation by rearranging exactly two matchsticks
+*Problem Statement:* Correct the equation by rearranging exactly two matchsticks
 ![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0002_img1.png)
 
-**Ways of thinking and dealing with such problems**
+*Ways of thinking and dealing with such problems*
 
 The way to approach these types of problems is to just observe the structure of the shapes included and try using the information you just gathered in multiple places until a solution clicks. The trick here is the speed with which you can observe and that will just come from practice and forcing your brain to think.
 
-**How to approach**
+*How to approach*
 Let us consider this arrangement of matchsticks, as you can see that the equation specified in the pattern is wrong.
 9 times 4 is 36 but the answer depicted is 46.
 
@@ -35,7 +35,7 @@ Let us consider this arrangement of matchsticks, as you can see that the equatio
 
 >>Then, we can also observe that 46 does not appear in the tables of any of the 1 digit numbers from 1 to 9(Pause and try determining why?). If you were able to determine the reason for the above statement, excellent. If you were not, we are here to discuss just that, now because we are dealing with multiplication, we have to broaden our mind and think in terms of numbers(factors, multiples, etc.). 
 
-_Possible pairs of numbers that multiply to the number 46:_ 
+Possible pairs of numbers that multiply to the number 46: 
 ![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0002_img2.png)
 
 46 does not appear in the tables of any 1 digit number because we can observe that 1, 2, 23, 43 are the factors of 46. So, we can conclude that we surely would have to change the RHS for this to be correct.
@@ -50,20 +50,20 @@ This way, the output will be as shown below
 ![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0002_img3.png)
 
 
-**Follow Up**
+*Follow Up*
 You can try to identify the solution to some example problems that I am providing. Remember that the problems similar to the coding problems you will face later do not have a single pre-defined algorithm to find their solution. Your job is to find a solution by taking inspiration from the methodologies we discussed above.
 
-**Question 1:** In the following figure, remove 3 sticks to leave 3 squares
+*Question 1:* In the following figure, remove 3 sticks to leave 3 squares
 ![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0002_img4.png)
 
 [Check the solution!](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0002_img5.png)
 
-**Question 2:** In the following figure, remove 3 sticks to leave 5 squares
+*Question 2:* In the following figure, remove 3 sticks to leave 5 squares
 ![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0002_img4.png)
 
 [Check the solution!](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0002_img6.png)
 
-**Question 3:** In the following figure, Move 1 stick to correct the equation
+*Question 3:* In the following figure, Move 1 stick to correct the equation
 ![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0002_img7.png)
 
 [Check the solution!](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0002_img8.png)
@@ -74,7 +74,7 @@ We will be looking at some diagrams consisting of numbers and some of the number
 
   
 
-**Problem Statement:** Which number should come in the place of the question mark?
+*Problem Statement:* Which number should come in the place of the question mark?
 
   
 
@@ -82,13 +82,13 @@ We will be looking at some diagrams consisting of numbers and some of the number
 
   
 
-**Ways of thinking and dealing with such problems**
+*Ways of thinking and dealing with such problems*
 
 >The method of dealing with numbers series problems like this one is to just observe the numbers that are known and find patterns between those numbers. The basic approach that I would suggest for such problems is to just look for relationships and patterns between numbers in all directions i.e. vertically, horizontally, diagonally etc. Along with that, your numerical ability also plays an important role here i.e. how quickly you can perform basic arithmetic operations. I would also suggest you to learn squares and cubes of at least the first 15 numbers.
 
   
 
-**How to approach**
+*How to approach*
 
 If we consider the sample problem we have taken, we can see that we have been given 3 individual circular shapes with 4 parts each. So, from this we can conclude that a common pattern is followed in all three of these circles. Now, to uncover the pattern we just brainstorm by remembering these two things:
 
@@ -107,7 +107,7 @@ If we consider the sample problem we have taken, we can see that we have been gi
 
   
 
-**Follow Up**
+*Follow Up*
 
 You can try to identify the solution to some example problems that I am providing. Remember that the problems similar to the coding problems you will face later do not have a single pre-defined algorithm to find their solution. Your job is to find a solution by taking inspiration from the methodologies I’ve discussed above.
 
@@ -115,7 +115,7 @@ You can try to identify the solution to some example problems that I am providin
 
 1.    
     
-![](https://lh3.googleusercontent.com/lEzB6qym2Cfwnm4gG2T6Zf5i1pj0wCLhGklqKXfCws14xJ2DN088nbxXM695-SVqbSwAf5Iah53561uKjsogkoVnyDtZ8cmaN9ajRW-mpha43IYGsKY7xbi-qEMC1ZHFicrl6MDKR0wtdHljug)
+[](https://lh3.googleusercontent.com/lEzB6qym2Cfwnm4gG2T6Zf5i1pj0wCLhGklqKXfCws14xJ2DN088nbxXM695-SVqbSwAf5Iah53561uKjsogkoVnyDtZ8cmaN9ajRW-mpha43IYGsKY7xbi-qEMC1ZHFicrl6MDKR0wtdHljug)
 
   
   
@@ -188,7 +188,7 @@ We will be looking at some special puzzle games in this section. We have already
 
   
 
-**Problem Statement:** Here, we are given a grid of size 4x4 and it has been divided into highly outlined areas as we can see.
+*Problem Statement:* Here, we are given a grid of size 4x4 and it has been divided into highly outlined areas as we can see.
 
 -   These heavily outlined areas are called “cages”
     
@@ -211,7 +211,7 @@ We will be looking at some special puzzle games in this section. We have already
   
   
 
-**Approach to KenKen puzzles**
+*Approach to KenKen puzzles*
 
   
 
@@ -236,7 +236,7 @@ The possible combinations are 2,1; 3,4. Now, again we take 3,4 and fill the box,
 
   
 
-**Complete Solution:**
+*Complete Solution:*
 
 ![](https://lh6.googleusercontent.com/stnRvgDr3mNWUKq9BxxClj4gicJDCauiWffzdWmrp9nY_ZBVRAIIOZ7TlngoUmVquWLHcRynk6qCXiRQgZeyaGYP79nNKzKFspmOyjq_w-8XT5rg_h7n1NfZj9VCk1ON4seAOnon83BN6dP6iA)
   
@@ -249,20 +249,17 @@ The possible combinations are 2,1; 3,4. Now, again we take 3,4 and fill the box,
   
   
 
-**Follow Up**
+*Follow Up*
 
 You can try to solve more of these puzzles and if you are still stuck, try solving KenKen Puzzles of size 3x3 online and then using the experience you will be able to solve the harder 4x4 puzzles.
 
   
 
-**Solve the given KenKen puzzle:** 
+*Solve the given KenKen puzzle:* 
 
 ![](https://lh3.googleusercontent.com/ThI0pyhqbWeZrf4z9TOs1vO3vDoE5H77A7s9NyLOiQVmmpQEE6HErVg24ZusTVpfSOzIGTGPXhYZc9N5EOaTcp5_y3O-bP_s_rAcq-QF5DVAutFqD11hI6Orn4R8zeGZTkparm1u8bCHGCcu9Q)
 
-**Solution:**
-
-![](https://lh4.googleusercontent.com/3eEmnAHMqVp0gj6IKseD80jEt2QCtWyvANUEjgdqfa--kKYRfzsRDwMA5QsGbc9dvDmEKeyxpBm2cPN6BFQeBPegIBQkMlGu0hjbDS-y00WLyJYkh3fNAcU_bUFYn-2EfRmkmDmUfHsBrVXaYg)
-
+[Check the solution!](https://lh4.googleusercontent.com/3eEmnAHMqVp0gj6IKseD80jEt2QCtWyvANUEjgdqfa--kKYRfzsRDwMA5QsGbc9dvDmEKeyxpBm2cPN6BFQeBPegIBQkMlGu0hjbDS-y00WLyJYkh3fNAcU_bUFYn-2EfRmkmDmUfHsBrVXaYg)
   
   
   
