--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/02-Thinking-with-numbers.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/02-Thinking-with-numbers.mdx
@@ -68,7 +68,7 @@ You can try to identify the solution to some example problems that I am providin
 
 [Check the solution!](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0002_img8.png)
 
-## NUMBER SERIES
+## Number Series
 
 We will be looking at some diagrams consisting of numbers and some of the number(s) might be missing from the diagram. Your job is to identify the missing number(s) and to do so you will be using the specified numbers in the diagram to find some pattern. Let's consider the following problem statement:
 
@@ -182,7 +182,7 @@ You can try to identify the solution to some example problems that I am providin
 
   
 
-## KenKen PUZZLES
+## KenKen Puzzles
 
 We will be looking at some special puzzle games in this section. We have already previously talked about the importance of quickness in using basic arithmetic operations. Well, KenKen puzzles test just that particular ability.
 
