--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/16-Under-the-hood.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/16-Under-the-hood.mdx
@@ -153,20 +153,38 @@ Under the hood lessons are meant for practice, as we know that skills come from 
  **Que:** Find the missing value. 
 ![](https://lh3.googleusercontent.com/7rMkw6gMPcYEnyP10IMfdHLgBjOlT37VOPIxzmqM-89IoKC4yyjEUMUPa5tPH6bloa7My27SdI7RluAfeNwTnLgKi7mS_Sw8FhvMGya3_3Q-IvmEFp6_4H10z4b9cnSMaRqic5X1Er1j6y26rJXVlng)
 
->[**Check the solution!**](https://lh5.googleusercontent.com/vLmKPwcNRTWs_n_iDx4LPnqYZDk60sRwZ87nuPhVqhzB0IR7Y1jbVOco4ah4Q1sUpbhZLnlQRajrA1_nRcZbz3ObzWlMSxLljBMS-DxF8GqQtNSG7lz8X8ygxOSbb8BleJfk5Ef364hTiTUsGKct23w)
+<details>
+  <summary>Check the answer!</summary>
+  
+  225
 
+</details>
+
+>[**Check the solution!**](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/uth_image1.jpeg)
 
  **Que:** Find the missing value.
 ![](https://lh3.googleusercontent.com/XvEkicH3iv7o1homPgNxdzo6sjOEI9XOd6Q-qqZCc3e5dTxLzEgPLF2GKQplg0bYdCLX__P_yrUdbCprVzBIBUyM-hMFN8sTnmGMLimaGmM0bYNldjKf28gfjRmFb_mO033Z3CNfborinWROx6U)
 
->[**Check the solution!**](https://lh5.googleusercontent.com/Uk4AFY2mk0zSuW_lEmcDFQSn7GuSAjU5_2_FAOzOwymI2bx_mzseElTkpvUkAcOVsaqqiFgcLKDXrkOVGtFs25T2XG9sOFwVKbCXevIkIw4bnIKyEfFm28Zmk_JTwkij4VaGpdlTyK2KbRufxBXMoek)
+<details>
+  <summary>Check the answer!</summary>
+  
+  16
+  
+</details>
 
+>[**Check the solution!**](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/uth_image2.jpeg)
 
  **Que:** Find the missing value.
 ![](https://lh3.googleusercontent.com/t-Aue2nbadXX6C3vjJSTDNLk2qVq1_F2VZxWGmIRf7sVGJsJswrZfkhXdtfryIOBIKOUdmX-UtOwYVNDP4qgNykb3TgsXjJt2pNpg1ma8oLg2Lg58S0z1LatGsezUKCr4KMTP6J59UFJccs0tzMyX5A)
 
->[**Check the solution!**](https://lh4.googleusercontent.com/uk9eoT2mW9GI8XygFdMxfa_RMrDV6HSUHCflbgVW5p3G5XJY45HUorYEJBS5rFzdzTZeW8ENmw5ps7blFPpq79eL64JYNILL4D6dxcPhd_quRIbgPJxnWeEvbi0tXF2CdnKvoXxGf9bhAhV4a2LHf6Y)
+<details>
+  <summary>Check the solution!</summary>
+  
+  81
+  
+</details>
 
+>[**Check the solution!**](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/uth_image3.png)
 
  **Que:** Find the missing value.
 ![](https://lh6.googleusercontent.com/ttFaS5RwX0mrhOE66scVgtV8h4wNYyYqVutXl4eFXiYTLEW_EC4yIj6EX7OIENNvpCZeBDdAJ6-BxAbUuLvBko98VxqyVFIkRoVhmBHt5KyilcxCDhAfskMcemCM5AnGx0rt7ixF_4HX0aqt9JiAAgY)
