--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/16-Under-the-hood.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/16-Under-the-hood.mdx
@@ -104,7 +104,7 @@ Under the hood lessons are meant for practice, as we know that skills come from 
 
 **Hint:** Only 1, 2, 3, 4 numbers should be used. The numbers should be distinct across rows and columns.
 
-![](https://lh6.googleusercontent.com/3dflt80NLwnq7BPZK0gF9gojVkTKRjmJAjU0gs8w6e0wgmtqB9u_7DzkOO545nm1GKVIwbrlmQI9qCyvINITOw_Q8bwYcW7e6QHYSt2rRU1mojjFAm0c2l5N41JmF9NS1wilvZZ3GRHrxM95gA)
+![](https://lh4.googleusercontent.com/WL7mkFHW3VgRBlSjxh-k4KvRKL7U9bsBa27BYRE5PWV8ZYN874rF7moVlOz9cn8ghLMj2YpUJ7FX99IYnu0eCCcRP2PHVY6fw_nmNxztGb0nw8jgCqNRpOvQPiWZcwzbTOxu_Mk7Z5vbm_RfDBlwI6w)
 
 <details>
   <summary>Check the solution!</summary>
@@ -188,9 +188,17 @@ Under the hood lessons are meant for practice, as we know that skills come from 
 
 
  **Que:** Find the missing value.
+ 
 ![](https://lh6.googleusercontent.com/ttFaS5RwX0mrhOE66scVgtV8h4wNYyYqVutXl4eFXiYTLEW_EC4yIj6EX7OIENNvpCZeBDdAJ6-BxAbUuLvBko98VxqyVFIkRoVhmBHt5KyilcxCDhAfskMcemCM5AnGx0rt7ixF_4HX0aqt9JiAAgY)
 
->[**Check the solution!**](https://lh6.googleusercontent.com/ZtwfUhqmES0lDoBpa9HvFMFYTaTNVUemOCeCoJY6EMfSi_6cOTYz-1Sq91c_icFN61QdzuXwEARvJfARE2wWFbWao5xe_5w_EyUaRI7G9N3PRYrXU3_IWbjV12_UXq7_fD8QXuAuLK5AQPiVD021ROw)
+<details>
+  <summary>Check the solution!</summary>
+  
+  103
+  
+</details>
+![](https://lh4.googleusercontent.com/5KNvxKDb5N9Ejxp52vWfNEAVQSbZzVyB5kKQi8OIeTgyE_Vl15kIUSN8EDr0F9lsJw1TD-TixdhoJvXiBSfLHNKNqtFNW8RYxLjtje_0UsoZVULxESetuZHaVtUP_1GQYn5H1ufPs7a5qvA96YGwe1o)
+
 
 ### Paper Cutting
  **Que:** Choose a figure which would most closely resemble the unfolded form of figure.
