--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/02-Thinking-with-numbers.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/02-Thinking-with-numbers.mdx
@@ -2,10 +2,12 @@
 
 ## Lesson Objective
 In this lesson, you will learn  how you should approach programming problems. We will try to understand the thinking process that is involved in approaching programming problems by building an analogy with numbers and observations related to numbers.
+
 ## Why to think with numbers?
 You must understand that computers are basically naive devices that process data and convert it into the required results and they use the instructions provided by the programmer to do so. Basically, in the future when you will be using your programming skills to solve coding problems, you will find that to think of the logic to the problems, you will be trying to uncover patterns in the examples provided. And that’s one of the places you will be trying to think in numbers and number patterns.
 
 Also, many times you will find pattern problems like these to check your logical thinking ability in preliminary tests that you will face for getting hired.
+
 ## Introduction to the Lesson
 Today, we will be solving some number puzzles which will mainly test your skills of observation and pattern discovery.
 
@@ -17,7 +19,7 @@ This will be a fun and playful lesson and you will be guided through the thought
 2. Number Series
 3. KenKen Puzzles
 
-## Match Stick Magic
+### 1. Match Stick Magic
 We will be looking at some mathematical equations and geometrical shapes made from matchsticks(which are nothing but straight lines of the same length). Let's consider the following problem statement:
 
 *Problem Statement:* Correct the equation by rearranging exactly two matchsticks
@@ -68,7 +70,7 @@ You can try to identify the solution to some example problems that I am providin
 
 [Check the solution!](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0002_img8.png)
 
-## Number Series
+### 2. Number Series
 
 We will be looking at some diagrams consisting of numbers and some of the number(s) might be missing from the diagram. Your job is to identify the missing number(s) and to do so you will be using the specified numbers in the diagram to find some pattern. Let's consider the following problem statement:
 
@@ -182,7 +184,7 @@ You can try to identify the solution to some example problems that I am providin
 
   
 
-## KenKen Puzzles
+### 3. KenKen Puzzles
 
 We will be looking at some special puzzle games in this section. We have already previously talked about the importance of quickness in using basic arithmetic operations. Well, KenKen puzzles test just that particular ability.
 
@@ -265,7 +267,7 @@ You can try to solve more of these puzzles and if you are still stuck, try solvi
   
   
 
-# End-of-the-lesson Assessment
+## End-of-the-lesson Assessment
 
 Q1: In the Match Stick Magic challenge, which two digit number can be formed with the help of sticks from digit 9?
 
