--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/03-Thinking-with-numbers-part2.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/03-Thinking-with-numbers-part2.mdx
@@ -1,10 +1,10 @@
 # Thinking with Numbers - Part 2
 
-# Lesson Objective
+## Lesson Objective
 
 We already covered 3 different types of puzzles in the previous lesson of thinking with numbers. This lesson will be the continuation of the previous lecture and we will discuss some more puzzles in this lecture. So, this will also be a fun lesson like the previous one.
 
-# Takeaways from the previous lesson
+## Takeaways from the previous lesson
 
 The most important takeaways from the previous lesson were:
 
@@ -15,7 +15,7 @@ The most important takeaways from the previous lesson were:
 -   The process of elimination of possibilities that will not be correct or feasible for our solution is very important.
     
 
-# Introduction to the Lesson
+## Introduction to the Lesson
 
 Today, we will be solving some **number puzzles** which will mainly focus on your ability to guess the possible permutations and combinations of digits that can form the solutions to these problems.
 
@@ -25,7 +25,7 @@ This will involve first of all your ability to observe and gather as much inform
 
   
 
-The specific puzzles we will discuss today are these three:
+**The specific puzzles we will discuss today are these three:**
 
 1.  Digit Challenge
     
@@ -39,7 +39,7 @@ The specific puzzles we will discuss today are these three:
   
   
 
-## Digit Challenge
+### 1. Digit Challenge
 
 We will be looking at some fill in the blanks type puzzles here. The puzzle will consist of a simple mathematical equation and you will be given some digits and you have to use only these digits to fill up the equation such that the equation is correct. These puzzles are designed to test your numerical comprehension and whether you are able to think with numbers at a basic level.
 
@@ -197,7 +197,7 @@ You can try to solve some other problems involving other arithmetic operations a
   
   
 
-## Crack the Code
+### 2. Crack the Code
 
 We will be looking at some fill in the blanks type puzzles here as well. This will be a fun puzzle and you will find that as you identify the hints in problems and connect the dots you move closer to the solution to problems. You will be given a 3-digit puzzle in the samples we will discuss, you can find 4-digit puzzles online if you find these puzzles interesting.
 
@@ -316,7 +316,7 @@ If you feel 3-digit codewords are easy for you, try giving the 4-digit one a try
   
   
 
-## Kakuro Puzzle
+### 3. Kakuro Puzzle
 
 Kakuro is a logic puzzle that is often referred to as a **mathematical version of the crossword puzzle** you must’ve seen in newspapers. The puzzle consists of a grid with cells and some of these cells are empty and some are filled with 1 or 2 numbers. These cells with the 1 or 2 numbers tell us how to fill the empty cells and a standard Kakuro puzzle has a unique solution. And because the solution is unique, the puzzle will only involve investigation of combinations and not various permutations like Sudoku. Let’s understand the puzzle in detail.
 
