--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/04-Thinking-with-visuals.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/04-Thinking-with-visuals.mdx
@@ -40,7 +40,7 @@ Here, basically we will be dealing with various types of visual, logical and rea
   
   
 
-## Picture equations
+### 1. Picture equations
 
   
 
@@ -104,7 +104,7 @@ Yes, you are thinking right. Just assign a unique English character to to same t
 ![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image8.png)
   
 
-## Inductive Reasoning
+### 2. Inductive Reasoning
 
   
 
@@ -212,7 +212,7 @@ Yes, you are thinking right. You can solve this in two ways:
   
   
 
-## Paper cutting
+### 3. Paper cutting
 
   
 
@@ -271,7 +271,7 @@ Lets see in example 1, and consider only the right half of the paper and visuali
   
   
 
-## End of lesson assessment
+## End-of-the-lesson Assessment
 
   
 ![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image21.png)
@@ -311,4 +311,3 @@ Lets see in example 1, and consider only the right half of the paper and visuali
   
   
 
-********The end********
