--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/05-Thinking-with-visuals-part2.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/05-Thinking-with-visuals-part2.mdx
@@ -38,7 +38,7 @@ Here, basically we will be dealing with various types of visual, logical and rea
   
   
 
-## Missing Terms
+## 1. Missing Terms
 
   
 
@@ -111,7 +111,7 @@ Yes, you are thinking right. Just follow the steps followed in given part of the
 ![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image8.png)
   
 
-## Colouring Patterns
+## 2. Colouring Patterns
 
 **What are they?**
 
@@ -192,7 +192,7 @@ As you can see, it's looking more like a conditional based question asking you t
   
   
 
-## Logic First, Code next
+## 3. Logic First, Code next
 
   
 
@@ -331,7 +331,7 @@ Yes, you are thinking right. Just think greedly, how can you do that? I had give
   
   
 
-## Take Home assignment
+## End-of-the-lesson Assessment
 
   
 
