--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/06-Efficient-problem-solving.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/06-Efficient-problem-solving.mdx
@@ -18,7 +18,7 @@ So Solving a Programming problem efficiently is much more important rather than 
 
 ## Introduction to the Lesson
 
-Today, we will be working on three topics:
+**Today, we will be working on three topics:**
 
   
 
@@ -40,7 +40,7 @@ Today, we will be working on three topics:
   
   
   
-## Cut  Hive  Puzzle
+## 1. Cut  Hive  Puzzle
 
 ## These are the Puzzles which are inspired by ‘Cut block’ Puzzles of japan.
 
@@ -152,7 +152,7 @@ Try solving these questions by your own
 
 ![](https://lh3.googleusercontent.com/HA6d8iySayI_GkgP5cvQ5WiLTHZh73tl4d_AzMxWuha_mVD74gWGR5R0wJz6aNxGmptZriiTwGiIySi-gti93uRB7CN_fqyi9qlzFNdW87TOGQYS-EUdgLrpLGkcj_HNz2pd6TrpZ7IfLl7zKLU)
 
-## SEARCH ALGORITHM
+## 2. Search Algorithm
 
   
 
@@ -330,7 +330,7 @@ Try solving these questions it will increase your understanding and will force y
   
   
 
-## Bakuro PUZZLES
+## 3. Bakuro Puzzles
 
 These puzzles are binary versions of the popular Kakuro puzzle. The empty cells of the grid must be filled with the numbers 1, 2, 4, 8,16 …. and so on (i.e., only powers of 2). As with Kakuro, the numbers in each block in a column or row must add up to the number given in the clue above or to the left, respectively. No number can be used twice within any sum. The clues are given in both binary and decimal. The answers must also be written in both binary and decimal. Here is an example with a solution and the method to how to approach in the right direction for a given problem.
 
