--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/02-Thinking-with-numbers.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/02-Thinking-with-numbers.mdx
@@ -1,15 +1,16 @@
 # Thinking with Numbers
 
 ## Lesson Objective
-In this lesson, you will learn  how you should approach programming problems. We will try to understand the thinking process that is involved in approaching programming problems by building an analogy with numbers and observations related to numbers.
+In this lesson, you will learn how to approach programming problems. We will try to understand the thinking process that is involved in approaching programming problems by building an analogy with numbers and observations related to numbers.
 
-## Why to think with numbers?
-You must understand that computers are basically naive devices that process data and convert it into the required results and they use the instructions provided by the programmer to do so. Basically, in the future when you will be using your programming skills to solve coding problems, you will find that to think of the logic to the problems, you will be trying to uncover patterns in the examples provided. And that’s one of the places you will be trying to think in numbers and number patterns.
+## Why should we think with numbers?
+You must understand that computers are basically naive devices that process data and convert it into the required results. They use the instructions provided by the programmer to do so. Basically, in the future when you will be required to use your programming skills to solve coding problems, you will find that in order to think of the logic involved in the problems, you will be trying to uncover patterns in the examples provided. This is where numbers and number patterns come into play.
 
-Also, many times you will find pattern problems like these to check your logical thinking ability in preliminary tests that you will face for getting hired.
+You will also find pattern problems like these to check your logical thinking ability in preliminary tests that you will face for getting hired. They’re like brain teasers, so let's tease your brain into thinking more critically.
 
 ## Introduction to the Lesson
 Today, we will be solving some number puzzles which will mainly test your skills of observation and pattern discovery.
+
 
 ![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0002.jpeg)
 
@@ -22,8 +23,12 @@ This will be a fun and playful lesson and you will be guided through the thought
 ### 1. Match Stick Magic
 We will be looking at some mathematical equations and geometrical shapes made from matchsticks(which are nothing but straight lines of the same length). Let's consider the following problem statement:
 
-*Problem Statement:* Correct the equation by rearranging exactly two matchsticks
+**Problem Statement:** Correct the equation by rearranging exactly two matchsticks
 ![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0002_img1.png)
+
+Think about it, don’t go looking for the answer just yet.Trial and error is how you will learn to solve such brain teasers. If you need a hint, here’s one
+
+> Hint: Start your thought process from the right hand side of the equal to sign. 
 
 *Ways of thinking and dealing with such problems*
 
@@ -328,4 +333,3 @@ Q3: Find the digit that will come in place of the question mark in the following
 4.  4
 
 
-`Under the hood` :bulb:
