--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/03-Thinking-with-numbers-part2.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/03-Thinking-with-numbers-part2.mdx
@@ -506,3 +506,7 @@ Q3: What numbers can you fill in the blanks to correct the equation:
 3.  6 and 3
     
 4.  (a) & (c) both
+
+
+`Under the hood` :bulb:
+To solve more such problems with numbers, you can refer to the lesson [under the hood](/Semester-1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/Under-the-hood). 
