--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/02-Thinking-with-numbers.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/02-Thinking-with-numbers.mdx
@@ -30,17 +30,22 @@ Think about it, don’t go looking for the answer just yet.Trial and error is ho
 
 > Hint: Start your thought process from the right hand side of the equal to sign. 
 
-*Ways of thinking and dealing with such problems*
+**Ways of thinking and dealing with such problems**
 
 The way to approach these types of problems is to just observe the structure of the shapes included and try using the information you just gathered in multiple places until a solution clicks. The trick here is the speed with which you can observe and that will just come from practice and forcing your brain to think.
 
-*How to approach*
-Let us consider this arrangement of matchsticks, as you can see that the equation specified in the pattern is wrong.
-9 times 4 is 36 but the answer depicted is 46.
+**How to approach**
 
->Now, the first thing that might come to mind is can we rearrange the 4 in RHS to make it 3 somehow by moving 2 sticks because that will make it 36. But, on further inspection we see that to formulate 3 we would need at least 5 sticks but the 4 in RHS has only 4 sticks, and we also can’t take a stick from the other digits because then it would change the equation.
+Let us consider this arrangement of matchsticks, as you can see that the equation specified in the pattern is wrong. Observation is an important part of this, so keep an eye out.
 
->>Then, we can also observe that 46 does not appear in the tables of any of the 1 digit numbers from 1 to 9(Pause and try determining why?). If you were able to determine the reason for the above statement, excellent. If you were not, we are here to discuss just that, now because we are dealing with multiplication, we have to broaden our mind and think in terms of numbers(factors, multiples, etc.). 
+>_Observation 1:_ 9 times 4 is 36 but the answer depicted is 46.
+Now, the first thing that might come to mind is can we rearrange the 4 in RHS to make it 3 somehow by moving 2 sticks because that will make it 36.
+
+>_Observation 2:_ On further inspection we see that to formulate 3 we would need at least 5 sticks but the 4 in RHS has only 4 sticks, and we also can’t take a stick from the other digits because then it would change the equation.
+
+>_Observation 3:_  We can also observe that 46 does not appear in the tables of any of the 1 digit numbers from 1 to 9 (Pause and try determining why?). 
+If you were able to determine the reason for the above statement, excellent. If you were not, we are here to discuss just that. Now because we are dealing with multiplication, we have to broaden our mind and think in terms of numbers(factors, multiples, etc.). 
+
 
 Possible pairs of numbers that multiply to the number 46: 
 ![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0002_img2.png)
@@ -56,22 +61,48 @@ Let’s explore more,
 This way, the output will be as shown below
 ![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0002_img3.png)
 
+So that was fun wasn’t it? Let’s do some more of these questions.
 
-*Follow Up*
+**Follow Up**
 You can try to identify the solution to some example problems that I am providing. Remember that the problems similar to the coding problems you will face later do not have a single pre-defined algorithm to find their solution. Your job is to find a solution by taking inspiration from the methodologies we discussed above.
 
-*Question 1:* In the following figure, remove 3 sticks to leave 3 squares
+**Question 1:** In the following figure, remove 3 sticks to leave 3 squares
 ![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0002_img4.png)
+
+<details>
+  <summary>Check the hint!</summary>
+  
+Think about the various patterns the squares form and how you can change them.
+  
+</details> 
+
 
 [Check the solution!](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0002_img5.png)
 
-*Question 2:* In the following figure, remove 3 sticks to leave 5 squares
+**Question 2:** In the following figure, remove 3 sticks to leave 5 squares
 ![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0002_img4.png)
+
+<details>
+  <summary>Check the hint!</summary>
+  
+Have you forgotten that four small squares together form a single big square.
+
+</details> 
+
 
 [Check the solution!](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0002_img6.png)
 
-*Question 3:* In the following figure, Move 1 stick to correct the equation
+**Question 3:** In the following figure, Move 1 stick to correct the equation
 ![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0002_img7.png)
+
+<details>
+  <summary>Check the hint!</summary>
+  
+Did you try moving one stick from the LHS to RHS
+
+</details> 
+
+
 
 [Check the solution!](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0002_img8.png)
 
@@ -81,50 +112,53 @@ We will be looking at some diagrams consisting of numbers and some of the number
 
   
 
-*Problem Statement:* Which number should come in the place of the question mark?
+**Problem Statement:** Which number should come in the place of the question mark?
 
   
 
 ![](https://lh4.googleusercontent.com/KpHwVkd7fI-BR61tgz9K90KO_TXhCgxCnk8xr0G8gutmyTLwRzuiPcygvLrc9MBTe7BFjVxecPPZWeTDkvHTdAnikcaYhFuzONe0y4_UZ-mX2C-UqjzQwVbvFOhbuyXekeda5ITNSyB7WD5DGQ)
 
+Think about how you would approach this problem before moving forward.
   
 
-*Ways of thinking and dealing with such problems*
+**Ways of thinking and dealing with such problems**
 
->The method of dealing with numbers series problems like this one is to just observe the numbers that are known and find patterns between those numbers. The basic approach that I would suggest for such problems is to just look for relationships and patterns between numbers in all directions i.e. vertically, horizontally, diagonally etc. Along with that, your numerical ability also plays an important role here i.e. how quickly you can perform basic arithmetic operations. I would also suggest you to learn squares and cubes of at least the first 15 numbers.
+The method of dealing with numbers series problems like this one is to just observe the numbers that are known and find patterns between those numbers. The basic approach that I would suggest for such problems is to just **look for relationships and patterns between numbers in all directions** i.e. vertically, horizontally, diagonally etc. Along with that, your numerical ability also plays an important role here i.e. how quickly you can perform basic arithmetic operations. 
+
+>_Tip:_ I would suggest you learn squares and cubes of at least the first 15 numbers. This would turn out to be very helpful in the future.
 
   
 
-*How to approach*
+**How to approach**
 
-If we consider the sample problem we have taken, we can see that we have been given 3 individual circular shapes with 4 parts each. So, from this we can conclude that a common pattern is followed in all three of these circles. Now, to uncover the pattern we just brainstorm by remembering these two things:
+>_Step 1:_ If we consider the sample problem we have taken, we can observe that we have been given 3 individual circular shapes with 4 parts each. So, from this we can conclude that a common pattern is followed in all three of these circles. 
 
-1.  Look for relationships and patterns between numbers in all directions i.e. vertically, horizontally, diagonally etc. as I already specified.
+>_Step 2:_ To uncover the pattern, we just brainstorm by remembering these two things:
+ Look for relationships and patterns between numbers in all directions i.e. vertically, horizontally, diagonally etc. as I already specified. 
+Check for the exact arithmetic operations being performed here.
+
+>_Step 3:_ Observe that the diagonal elements from bottom-left to top-right are being multiplied and the result consists of 2 digits that are represented by the digits from bottom-right to top-left in that order.
+For example in the first circle, 7 x 8 = 56
+So, the number that is missing is 6  (9 x 4 = 3 6)
+  
+
+**Follow Up**
+
+You can try to identify the solution to some example problems provided below. Remember that the problems similar to the coding problems you will face later do not have a single pre-defined algorithm to find their solution. Your job is to find a solution by taking inspiration from the methodologies discussed above.
+  
+
+**Question 1:** Find out the number that should come in place of the question mark.
     
-2.  Check for the exact arithmetic operations being performed here.
     
+![](https://lh3.googleusercontent.com/lEzB6qym2Cfwnm4gG2T6Zf5i1pj0wCLhGklqKXfCws14xJ2DN088nbxXM695-SVqbSwAf5Iah53561uKjsogkoVnyDtZ8cmaN9ajRW-mpha43IYGsKY7xbi-qEMC1ZHFicrl6MDKR0wtdHljug)
 
+
+<details>
+  <summary>Check the hint!</summary>
   
-
->We observe that the diagonal elements from bottom-left to top-right are being multiplied and the result consists of 2 digits that are represented by the digits from top-left and bottom-right.
-
+ Please take a closer look at the numbers in alternate columns.
   
-
->So, the number that is missing is 6 (9*4 = 3 6)
-
-  
-
-*Follow Up*
-
-You can try to identify the solution to some example problems that I am providing. Remember that the problems similar to the coding problems you will face later do not have a single pre-defined algorithm to find their solution. Your job is to find a solution by taking inspiration from the methodologies I’ve discussed above.
-
-  
-
-1.    
-    
-[](https://lh3.googleusercontent.com/lEzB6qym2Cfwnm4gG2T6Zf5i1pj0wCLhGklqKXfCws14xJ2DN088nbxXM695-SVqbSwAf5Iah53561uKjsogkoVnyDtZ8cmaN9ajRW-mpha43IYGsKY7xbi-qEMC1ZHFicrl6MDKR0wtdHljug)
-
-  
+</details>  
   
   
 
@@ -133,23 +167,23 @@ You can try to identify the solution to some example problems that I am providin
   
  4 + 8 = 12 + x => x = 0
   
-</details>  
-  
-  
-  
-  
+</details>
 
 
-  
+**Question 2:** Find out the number that should come in place of the question mark.
 
-2.    
-    
+
 ![](https://lh4.googleusercontent.com/i09W3_7WJ223sF8y_Om1mkxaHrgvDnQnKKeQ-mSZ1mnjF0S9QcO7u_0PFJ58IeWXsEGKkSzf_n89NFkTG4N1TXtt7ph8065GodyIHClDG_bmh4Nlvgsx29FIWE2JK7jGm_agDloeNgwAmwmnUQ)
 
+
+<details>
+  <summary>Check the hint!</summary>
   
+Take the product of the 1st and 2nd column and do a basic mathematical operation with the 3rd column.
   
-  
-  
+</details>  
+
+
 
 <details>
   <summary>Check the solution!</summary>
@@ -158,19 +192,19 @@ You can try to identify the solution to some example problems that I am providin
   
 </details>  
   
-  
-  
-  
 
-
+**Question 3:** Find out the number that should come in place of the question mark.
   
-  
-
-3.    
 
 ![](https://lh3.googleusercontent.com/Byz33e5BUqu-_TD4JPMkVkugH6FIrhGBW4noKDx-KgZxItTeZx3XGmCWg4f-YVm7LQJT36bDY3_aLkZ2yJb9aVBJXkPAGyyjEP-Mp2Mdo9XYUs6dD0-woGp26rCzkwvnqC2LZgLXCIyY-9dbkw)
 
   
+<details>
+  <summary>Check the hint!</summary>
+  
+Look at the digits from the upper half and lower half as 3 digit numbers. Eg: fig1 has 496, 992
+
+</details>  
   
   
 
